--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -14,7 +14,7 @@
         -if @minimum_password_length
           | (
           = @minimum_password_length
-          | characters minimum)
+          | 文字以上)
         br
         = f.password_field :password, autocomplete: "off", class: "no-ime"
       .field
