--- a/app/views/customers/edit.html.slim
+++ b/app/views/customers/edit.html.slim
@@ -1,4 +1,4 @@
 = link_to '詳細表示', @customer, class: 'btn btn-default'
 = link_to '一覧に戻る', customers_path, class: 'btn btn-default'
-h2 参加者データ編集
+h2 顧問先データ編集
 = render 'form', customer: @customer
