--- a/app/views/event_details/_form.html.slim
+++ b/app/views/event_details/_form.html.slim
@@ -12,4 +12,6 @@
   .field
     = f.label :advisor_id
     = f.number_field :advisor_id
+  .field
+    = f.hidden_field :editor_code, value: current_admin.id
   .actions = f.submit
