--- a/app/views/advisors/index.html.slim
+++ b/app/views/advisors/index.html.slim
@@ -22,5 +22,5 @@ table.table.table-bordered.table-sm
         td = a.name
         td = a.company_short_name
         td = a.position
-        td = Admin.find(a.editor_code).username
+        td = Admin.find(a.editor_code).name
         td = a.updated_at.strftime("%Y/%m/%d %H:%M")
