--- a/app/views/advisors/new.html.slim
+++ b/app/views/advisors/new.html.slim
@@ -1,3 +1,6 @@
+.row
+  p#notice
+    = notice
 = link_to '一覧に戻る', advisors_path, class: 'btn btn-default'
 h2 参加者データ新規追加
 = render 'form', advisor: @advisor
