--- a/app/views/customers/show.html.slim
+++ b/app/views/customers/show.html.slim
@@ -18,6 +18,11 @@
         = @customer.name
     .row
       strong.col-12.col-md-5
+        | フリガナ:
+      .col-12.col-md-7
+        = @customer.kana
+    .row
+      strong.col-12.col-md-5
         | 会社:
       .col-12.col-md-7
         = @customer.company
