--- a/app/views/advisors/_form.html.slim
+++ b/app/views/advisors/_form.html.slim
@@ -12,6 +12,9 @@
     = form.label :name, class: 'col-5 col-md-2'
     = form.text_field :name, class: 'col-5 col-md-3'
   .field.row
+    = form.label :kana, class: 'col-5 col-md-2'
+    = form.text_field :kana, class: 'col-5 col-md-3'
+  .field.row
     = form.label :company, class: 'col-5 col-md-2'
     = form.text_field :company, class: 'col-5 col-md-3'
   .field.row
