--- a/app/views/customers/new.html.slim
+++ b/app/views/customers/new.html.slim
@@ -1,3 +1,6 @@
+.row
+  p#notice
+    = notice
 = link_to '一覧に戻る', customers_path, class: 'btn btn-default'
 h2 顧問先データ新規追加
 = render 'form', customer: @customer
