--- a/app/views/events/_form.html.slim
+++ b/app/views/events/_form.html.slim
@@ -1,13 +1,13 @@
 = form_with(model: event, local: true) do |form|
-  - if event.errors.any?
-    #error_explanation
-      h2
-        = pluralize(event.errors.count, "error")
-          | prohibited this event from being saved:
-      ul
-      - event.errors.full_messages.each do |message|
-        li= message
-
+  .row
+    - if event.errors.any?
+      #error_explanation
+        h2
+          = pluralize(event.errors.count, "error")
+            | prohibited this event from being saved:
+        ul
+        - event.errors.full_messages.each do |message|
+          li= message
   .field.row
     = form.label :name, class: 'col-5 col-md-2'
     = form.text_field :name, class: 'col-5 col-md-3'
