--- a/app/views/advisors/_form.html.slim
+++ b/app/views/advisors/_form.html.slim
@@ -1,4 +1,5 @@
 = javascript_include_tag "https://ajaxzip3.github.io/ajaxzip3.js"
+= javascript_include_tag "autokana.js", :defer => "defer" 
 - content_for :javascript
   javascript:
     document.addEventListener("DOMContentLoaded", function() {
