イベント詳細にて未回答を表示するよう修正

--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -63,21 +63,26 @@ table.table.table-bordered.table-sm
       th.col-12.col-md-1 編集ユーザー
       th.col-12.col-md-1 最終更新日時
   tbody
-    - @activities.each do |ac|
+    - @customers.each do |c|
       tr
-        td = ac.customer.name
-        td = ac.customer.company_short_name
-        td = ac.customer.position
-        td = ac.customer.contact_tel
-        td = ac.customer.contact_email
-        td
-          - case ac.attendance_type
-          - when 1
-            | 出席
-          - when 2
-            | 欠席
-        td = Admin.find(ac.editor_code).name
-        td = ac.updated_at.strftime("%Y/%m/%d %H:%M")
+        td = c.name
+        td = c.company_short_name
+        td = c.position
+        td = c.contact_tel
+        td = c.contact_email
+        - if Activity.where('event_id = ?', @event.id).where('customer_id = ?', c.id).present?
+          td
+            - case Activity.where('event_id = ?', @event.id).where('customer_id = ?', c.id).last.attendance_type
+            - when 1
+              | 出席
+            - when 2
+              | 欠席
+          td = Admin.find(Activity.where('event_id = ?', @event.id).where('customer_id = ?', c.id).last.editor_code).name
+          td = Activity.where('event_id = ?', @event.id).where('customer_id = ?', c.id).last.updated_at.strftime("%Y/%m/%d %H:%M")
+        - else
+          td 未回答
+          td
+          td
 h3 参加者リスト
 table.table.table-bordered.table-sm
   thead.thread-light
@@ -91,18 +96,23 @@ table.table.table-bordered.table-sm
       th.col-12.col-md-1 編集ユーザー
       th.col-12.col-md-1 最終更新日時
   tbody
-    - @event_details.each do |ed|
+    - @advisors.each do |a|
       tr
-        td = ed.advisor.name
-        td = ed.advisor.company_short_name
-        td = ed.advisor.position
-        td = ed.advisor.contact_tel
-        td = ed.advisor.contact_email
-        td
-          - case ed.attendance_type
-          - when 1
-            | 出席
-          - when 2
-            | 欠席
-        td = Admin.find(ed.editor_code).name
-        td = ed.updated_at.strftime("%Y/%m/%d %H:%M")
+        td = a.name
+        td = a.company_short_name
+        td = a.position
+        td = a.contact_tel
+        td = a.contact_email
+        - if EventDetail.where('event_id = ?', @event.id).where('advisor_id = ?', a.id).present?
+          td
+            - case EventDetail.where('event_id = ?', @event.id).where('advisor_id = ?', a.id).last.attendance_type
+            - when 1
+              | 出席
+            - when 2
+              | 欠席
+          td = Admin.find(EventDetail.where('event_id = ?', @event.id).where('advisor_id = ?', a.id).last.editor_code).name
+          td = EventDetail.where('event_id = ?', @event.id).where('advisor_id = ?', a.id).last.updated_at.strftime("%Y/%m/%d %H:%M")
+        - else
+          td 未回答
+          td
+          td
